apps/matrix/cinny-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cinny
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: cinny
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
