apps/matrix/element-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: element
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
